<?php declare(strict_types=1);

namespace App\Domain\Model\Card\Interfaces;

/**
 * @package App\Domain\Model\Card\Interfaces
 */
interface Card
{

}
